# athena_particle_counter

./: .gitignore  CMakeLists.txt  README.md  athena_with_fe.xml  main.xml  simrun.sh  visrun.sh  visualize.mac
counter/: Q3eR_counter.xml  counter.xml  display.xml  forward_electron_layout.xml  hcal.xml  tagger_counters.xml
macro/: fprint.py
macro/beam_shape/: plots_Q3eR.py
macro/ddhits/: analysis.py  block_scale.py  detector.py  hcal_endcap_p.py  hcal_layers.py  pixel.py  pmt.py  run_ddhits.py  scifi_nfib.py  sipm.py
macro/hit_rate/: hitpos.py  plot_hits.py
src/: ParticleCountCyl_geo.cpp  ParticleCounterSD.cpp  ParticleCounterTube_geo.cpp  ParticleCounter_geo.cpp
